--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "stevenmaguire/oauth2-keycloak",
+    "name": "voidagency/oauth2-keycloak",
     "description": "Keycloak OAuth 2.0 Client Provider for The PHP League OAuth2-Client",
     "license": "MIT",
     "authors": [
         {
             "name": "Steven Maguire",
             "email": "stevenmaguire@gmail.com",
-            "homepage": "https://github.com/stevenmaguire"
+            "homepage": "https://github.com/voidagency/oauth2-keycloak"
         }
     ],
     "keywords": [
